2015-08-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade GNU MPC package set to version 1.0.2

	* mingw32/mingw32-mpc.xml: Add new release specifications.
	(mpc) <info>: New subpackage; specify it, as initial release.
	* common/issue.log mingw32/issue.log: Update accordingly.

2015-08-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Revert corruption of file attributes (again).

	* common/issue.log mingw32/issue.log msys/issue.log: Reset bogus
	executable attribute.

2015-07-03  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade dos2unix to version 7.2.3.

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 7.2.3.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 7.2.3.
	* mingw32/issue.log: Updated accordingly.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

2015-05-26  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade dos2unix to version 7.2.2.

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 7.2.2.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 7.2.2.
	* mingw32/issue.log: Updated accordingly.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

2014-08-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade MinGW Runtime package to release mingwrt-3.21

	* mingw32/mingw32-runtime.xml: Add new release specifications;
	withdraw installation support for releases pre-dating mingwrt-3.18.
	(mingw32-mingwrt) <lic, man>: New sub-packages, separated out from...
	(mingw32-mingwrt) <dev>: ...here; retrofit virtual equivalents for
	prior releases, to maintain mingw-get roll-back consistency.

	* mingw32/issue.log common/issue.log: Updated accordingly.

2014-10-19  Cesar Strauss  <cestrauss@gmail.com>

	Upgrade msys-bash to GNU Bash 3.1 patchlevel 23.

	* msys/msys-bash.xml: Update to 3.1.23-1.
	(msys-bash) <lnk>: New component for creating msys.bat shortcuts.
	* common/issue.log msys/issue.log: Updated accordingly.
